--- a/Pet2Vet/templates/project.html
+++ b/Pet2Vet/templates/project.html
@@ -1,7 +1,9 @@
+
+
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Project</title>
+	<title>Veterinary</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great" rel="stylesheet">
@@ -17,11 +19,11 @@
 		#heading {
 				font-family: 'Fredericka the Great', cursive;
 				font-size: 100px;
-				color:white; 
+				color:white;
 			}
 		h2 {
 				font-family: 'Fredericka the Great', cursive;
-				color:white; 
+				color:white;
 			}
 		p {
 				color:white;
@@ -37,7 +39,7 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
-	      </button> 
+	      </button>
 	      <a class="navbar-brand"><i class="fa fa-tree"></i> GGO</a>
 	    </div>
 
@@ -45,46 +47,48 @@
 	      <ul class="nav navbar-nav">
 	        <li><a href="http://127.0.0.1:5000/">Home</a></li>
 	        <li><a href="http://127.0.0.1:5000/about">About</a></li>
-	        
-	        <li class="active"><a href="http://127.0.0.1:5000/project">Our Project</a></li>
+
+	        <li class="active"><a href="http://127.0.0.1:5000/project">Veterinary</a></li>
 	        <li><a href="http://127.0.0.1:5000/issue">The Issue</a></li>
 	        <li><a href="http://127.0.0.1:5000/contact">Contact</a></li>
 	      </ul>
 	      <ul class="nav navbar-nav navbar-right">
-	        
+
 	        <li><a href="http://127.0.0.1:5000/donate">Donate</a></li>
 	      </ul>
 	    </div>
 	  </div>
 	</nav>
 	<div class="container">
-		<h1 id="heading">Our Projects</h1>
+		<h1 id="heading">Veterinary</h1>
 			<div class="row">
 				<div class="col-sm-6">
-					<h2>Project Green Deccan</h2>
+					<h2>Sai Veterinary Clinic</h2>
 					<p>
-						<strong>Location: </strong>Talupula mandal village, Anantapur District, A.P., India<br>
-						<strong>Species Planted: </strong>Mango, Jamun, Sapota, Guava<br>
-						<strong>Environmental and Social Impact: </strong>Talupula attracts very less annual rainfall and several times faces situation of drought, causing heavy losses to poor farmers. This situation often leads to frustration, despair and suicidal tendency among these farming communities. Therefore despite of all odd climatic conditions Go Green Organiztion has worked out an action plan to add greenery and provide horticulture farming based additional livelihood option to poor farmers of this region.
-					</p>
+						<strong>Location: </strong>Old Maneklal Estate, Near Telephone Exchange, Ghatkopar West, Girdhar Nagar, Ghatkopar West, Mumbai, Maharashtra 400086<br>
+            <strong>Contact: </strong>098677 23687<br>
+            <strong>Opens: </strong>10:30 AM – 12:30 PM, 5:30 – 8:30 PM<br>
+
+ 					</p>
 				</div>
 				<div class="col-sm-6">
-					<img src="http://www.sankalptaru.org/pictures/locations/1/1.jpg" width=500px height=300px></img>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3770.448831162055!2d72.90184031474392!3d19.087956056557214!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c7d4ae0838a1%3A0xe7a0327b702ed33f!2sSai+Veterinary+Clinic!5e0!3m2!1sen!2sin!4v1552733422788" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
 				</div>
 			</div>
 			<hr>
 			<div class="row">
 				<div class="col-sm-6">
-					<h2>Project Protect Himalayas</h2>
+					<h2>Paws and Claws Pet Care</h2>
 					<p>
-						<strong>Location: </strong>Chamoli,Uttarakhand, Himalayas - India<br>
-						<strong>Species Planted: </strong>Orange, Amla, Peach<br>
-						<strong>Environmental and Social Impact: </strong>Go Green Organization is promoting environmental awareness among students of various government schools in this remotely located region around Chamoli, Uttarakhand. The project also aims at checking soil erosion through tree plantation in this landslide affected area. Students are closely involved in planting and nurturing trees.
+
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3771.046956806766!2d72.83211451474358!3d19.061672957376466!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c91670cf6daf%3A0xdff17ab8bea48aaa!2sPaws+N+Furs!5e0!3m2!1sen!2sin!4v1552734225935" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
 
 					</p>
 				</div>
 				<div class="col-sm-6">
-					<img src="http://www.sankalptaru.org/pictures/locations/4/1.jpg" width=500px height=300px></img>
+          <strong>Location: </strong>487 Pali, Village, Bandra West, Mumbai, Maharashtra 400050<br>
+          <strong>Contact: </strong>098678 85738<br>
+          <strong>Opens: </strong>10:30 AM - 8:30 PM<br>
 				</div>
 			</div>
 			<hr>
@@ -92,49 +96,63 @@
 				<div class="col-sm-6">
 					<h2>Project Enrich Biodiversity</h2>
 					<p>
-						<strong>Location: </strong>Takari village, Walva Taluka, Sangli, Maharashtra, India<br>
-						<strong>Species Planted: </strong>Mango, Guava, Gulmohar, Neem<br>
-						<strong>Environmental and Social Impact: </strong>The village has more than 80% of the total population which lives under the poverty line. There are no employment opportunities other than farming available for poor youth and therefore they opt to move to cities in search of employment. The village is located on the banks of river Krishna and there is a tremendous potential to extend livelihood option to villagers and promote biodiversity through development of a sustainable plantation program.
-						Impressed with the active participation from village panchayat and local communities, Go Green Organiztion has taken a pledge to sponsor villagers for orchards full of fruit bearing trees. Moreover ample of irrigation facilities will also help in sustenance of planted trees and we believe that grown up trees will become source of income for the poor farmers.
+            <strong>Location: </strong>
+Sandesh Nagar, Bail Bazar, Mumbai, Maharashtra 400099<br>
+            <strong>Contact: </strong>093246 24543<br>
+            <strong>Opens: </strong>10:30 AM - 7 PM<br>
 					</p>
 					<br>
 				</div>
 				<div class="col-sm-6">
-					<img src="http://www.sankalptaru.org/pictures/locations/9/1.jpg" width=500px height=300px></img>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3770.461408038562!2d72.87893111474395!3d19.087403756574368!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c86189ff5f1f%3A0xaf32091295377712!2sSai+Vet+Clinic%2C+Dr.+Chinmay+On+Call+Vet!5e0!3m2!1sen!2sin!4v1552734540191" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>				</div>
+			</div>
+			<hr>
+			<div class="row">
+				<div class="col-sm-6">
+					<h2>Project Green Leh Ladakh</h2
+					<p>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3769.8279574929115!2d72.86851521474429!3d19.11520195570675!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c83c5d2f463f%3A0x208a26350f3d4860!2sDr.+Bane&#39;s+Pet+Clinic!5e0!3m2!1sen!2sin!4v1552734952088" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+          </p>
+					<br>
+				</div>
+				<div class="col-sm-6">
+          <strong>Location: </strong>
+
+          Raylon Arcade, c-3 OppAngel Medical near Pidilite Company, RK Mandir Rd, Bhim Nagar, Andheri East, Mumbai, Maharashtra 4000699<br>
+
+          <strong>Contact: </strong>098206 95123<br>
+
+          <strong>Opens: </strong>11am–2pm 6–9pm<br>
 				</div>
 			</div>
 			<hr>
 			<div class="row">
 				<div class="col-sm-6">
-					<h2>Project Green Leh Ladakh</h2>
+					<h2>Barks and mews</h2>
 					<p>
-						<strong>Location: </strong>Village Stakna, Leh Ladakh, India.<br>
-						<strong>Species Planted: </strong>Willows (Salix), Poplar<br>
-						<strong>Environmental and Social Impact: </strong>Go Green Organization has initiated a green campaign in the most difficult terrain in the cold arid desert of Ladakh and is dedicated to the sustainable development of the region. 
-						Amidst of inclement weather conditions, with support from local communities we are working towards developing thick forests in this arid region to help check soil erosion and preserve environment.
+            <strong>Location: </strong>
+Shop Number 14 Sarla Terrace Opposite Neel Kamal Hotel, Sion - Trombay Rd, Umarshi Bappa Chowk, Swastik Park, Chembur East, Mumbai, Maharashtra 400071
+                                <br>
+
+
+
+            <strong>Contact: </strong>098201 081273<br>
+
+
+
+            <strong>Opens: </strong>11am–2pm 6–8pm<br>
+
+
+
+
+
 					</p>
 					<br>
 				</div>
 				<div class="col-sm-6">
-					<img src="http://www.sankalptaru.org/pictures/locations/18/1.jpg" width=500px height=300px></img>
-				</div>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3771.2176459686825!2d72.88771031474347!3d19.054166057610317!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c8a5075f19fd%3A0xd7e7ab6a4a93f968!2sBarks+N+Mews!5e0!3m2!1sen!2sin!4v1552735309375" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>				</div>
 			</div>
-			<hr>
-			<div class="row">
-				<div class="col-sm-6">
-					<h2>Project Green Thar</h2>
-					<p>
-						<strong>Location: </strong>Village Bhata,Harsani,Paadru,Chokhla District-Barmer and Raajmathai District- Jaisalmer , Thar Desert, Rajasthan,India<br>
-						<strong>Species Planted: </strong>Pomegranate, Ber, Neem.<br>
-						<strong>Environmental and Social Impact: </strong>In pursuit of creating forest in middle of Thar Desert, Go Green Organiztion is developing pomegranate and other fruit bearing trees orchards for the farmers in these villages. While the entire area lacks tree cover, we have taken up a challenge to grow fruit bearing trees to directly benefit poor villagers who have limited livelihood options. The planted trees will also provide fodder to livestock which currently struggles in lack of vegetation. We have also adopted few government schools to make their campuses greener through tree plantation. Best performing schools are rewarded with funds from our end, therefore in addition to creating environmental impact we are also supporting cause of education through this plantation site.
-					</p>
-					<br>
-				</div>
-				<div class="col-sm-6">
-					<img src="http://www.sankalptaru.org/pictures/locations/19/1.jpg" width=500px height=300px></img>
-				</div>
-			</div>
-	</div> 
+	</div>
 <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
