--- a/Pet2Vet/templates/project.html
+++ b/Pet2Vet/templates/project.html
@@ -73,22 +73,26 @@
 				</div>
 				<div class="col-sm-6">
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3770.448831162055!2d72.90184031474392!3d19.087956056557214!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c7d4ae0838a1%3A0xe7a0327b702ed33f!2sSai+Veterinary+Clinic!5e0!3m2!1sen!2sin!4v1552733422788" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-				</div>
+
+  </div>
 			</div>
 			<hr>
 			<div class="row">
-				<div class="col-sm-6">
-					<h2>Paws and Claws Pet Care</h2>
+				<div class="col-sm-6" color= white>
+
 					<p>
 
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3771.046956806766!2d72.83211451474358!3d19.061672957376466!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c91670cf6daf%3A0xdff17ab8bea48aaa!2sPaws+N+Furs!5e0!3m2!1sen!2sin!4v1552734225935" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
 
 					</p>
 				</div>
-				<div class="col-sm-6">
+				<div class="col-sm-6" >
+          <font color="white">
+          <h2>Paws and Claws Pet Care</h2>
           <strong>Location: </strong>487 Pali, Village, Bandra West, Mumbai, Maharashtra 400050<br>
           <strong>Contact: </strong>098678 85738<br>
           <strong>Opens: </strong>10:30 AM - 8:30 PM<br>
+          </font>
 				</div>
 			</div>
 			<hr>
@@ -116,6 +120,8 @@ Sandesh Nagar, Bail Bazar, Mumbai, Maharashtra 400099<br>
 					<br>
 				</div>
 				<div class="col-sm-6">
+          <font color="white">
+					<h2>Barks and mews</h2>
           <strong>Location: </strong>
 
           Raylon Arcade, c-3 OppAngel Medical near Pidilite Company, RK Mandir Rd, Bhim Nagar, Andheri East, Mumbai, Maharashtra 4000699<br>
@@ -123,12 +129,13 @@ Sandesh Nagar, Bail Bazar, Mumbai, Maharashtra 400099<br>
           <strong>Contact: </strong>098206 95123<br>
 
           <strong>Opens: </strong>11am–2pm 6–9pm<br>
+          </font>
 				</div>
 			</div>
 			<hr>
 			<div class="row">
 				<div class="col-sm-6">
-					<h2>Barks and mews</h2>
+
 					<p>
             <strong>Location: </strong>
 Shop Number 14 Sarla Terrace Opposite Neel Kamal Hotel, Sion - Trombay Rd, Umarshi Bappa Chowk, Swastik Park, Chembur East, Mumbai, Maharashtra 400071
