--- a/Pet2Vet/templates/project.html
+++ b/Pet2Vet/templates/project.html
@@ -60,20 +60,22 @@
 	  </div>
 	</nav>
 	<div class="container">
-		<h1 id="heading">Veterinary</h1>
+		<h1 id="heading">NGOs</h1>
 			<div class="row">
 				<div class="col-sm-6">
-					<h2>Sai Veterinary Clinic</h2>
+					<h2>F.I.A.P.O</h2>
 					<p>
-						<strong>Location: </strong>Old Maneklal Estate, Near Telephone Exchange, Ghatkopar West, Girdhar Nagar, Ghatkopar West, Mumbai, Maharashtra 400086<br>
-            <strong>Contact: </strong>098677 23687<br>
-            <strong>Opens: </strong>10:30 AM – 12:30 PM, 5:30 – 8:30 PM<br>
+						<strong>Location: </strong>E-18A, Block E, East of Kailash, New Delhi, Delhi 110048<br>
+            <strong>Contact: </strong>011 4107 2945<br>
 
+            <div class="button">
+                <a href="#" class="btn btn-one">Register Here</a>
+                <a href="#" class="btn btn-two"> Donte Here</a>
+            </div>
  					</p>
 				</div>
 				<div class="col-sm-6">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3770.448831162055!2d72.90184031474392!3d19.087956056557214!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c7d4ae0838a1%3A0xe7a0327b702ed33f!2sSai+Veterinary+Clinic!5e0!3m2!1sen!2sin!4v1552733422788" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3504.416704046125!2d77.2393478148989!3d28.55724719423553!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce3b55bef77f5%3A0x7796fff8850d3261!2sFIAPO+(Federation+of+Indian+Animal+Protection+Organisations)!5e0!3m2!1sen!2sin!4v1552737077208" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
   </div>
 			</div>
 			<hr>
@@ -88,77 +90,33 @@
 				</div>
 				<div class="col-sm-6" >
           <font color="white">
-          <h2>Paws and Claws Pet Care</h2>
-          <strong>Location: </strong>487 Pali, Village, Bandra West, Mumbai, Maharashtra 400050<br>
-          <strong>Contact: </strong>098678 85738<br>
-          <strong>Opens: </strong>10:30 AM - 8:30 PM<br>
+          <h2>People For Animal</h2>
+          <strong>Location: </strong>487 Cama Village, Andheri West, Mumbai, Maharashtra 400050<br>
+          <strong>Contact: </strong>094678 85738<br>
+          <div class="button">
+              <a href="#" class="btn btn-one">Register Here</a>
+              <a href="#" class="btn btn-two"> Donte Here</a>
+          </div>
+
           </font>
 				</div>
 			</div>
 			<hr>
 			<div class="row">
 				<div class="col-sm-6">
-					<h2>Project Enrich Biodiversity</h2>
+					<h2>Help Animals India</h2>
 					<p>
             <strong>Location: </strong>
 Sandesh Nagar, Bail Bazar, Mumbai, Maharashtra 400099<br>
             <strong>Contact: </strong>093246 24543<br>
-            <strong>Opens: </strong>10:30 AM - 7 PM<br>
 					</p>
 					<br>
 				</div>
 				<div class="col-sm-6">
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3770.461408038562!2d72.87893111474395!3d19.087403756574368!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c86189ff5f1f%3A0xaf32091295377712!2sSai+Vet+Clinic%2C+Dr.+Chinmay+On+Call+Vet!5e0!3m2!1sen!2sin!4v1552734540191" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>				</div>
 			</div>
-			<hr>
-			<div class="row">
-				<div class="col-sm-6">
-					<h2>Project Green Leh Ladakh</h2
-					<p>
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3769.8279574929115!2d72.86851521474429!3d19.11520195570675!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c83c5d2f463f%3A0x208a26350f3d4860!2sDr.+Bane&#39;s+Pet+Clinic!5e0!3m2!1sen!2sin!4v1552734952088" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-          </p>
-					<br>
-				</div>
-				<div class="col-sm-6">
-          <font color="white">
-					<h2>Barks and mews</h2>
-          <strong>Location: </strong>
-
-          Raylon Arcade, c-3 OppAngel Medical near Pidilite Company, RK Mandir Rd, Bhim Nagar, Andheri East, Mumbai, Maharashtra 4000699<br>
-
-          <strong>Contact: </strong>098206 95123<br>
-
-          <strong>Opens: </strong>11am–2pm 6–9pm<br>
-          </font>
-				</div>
-			</div>
-			<hr>
-			<div class="row">
-				<div class="col-sm-6">
-
-					<p>
-            <strong>Location: </strong>
-Shop Number 14 Sarla Terrace Opposite Neel Kamal Hotel, Sion - Trombay Rd, Umarshi Bappa Chowk, Swastik Park, Chembur East, Mumbai, Maharashtra 400071
-                                <br>
 
 
-
-            <strong>Contact: </strong>098201 081273<br>
-
-
-
-            <strong>Opens: </strong>11am–2pm 6–8pm<br>
-
-
-
-
-
-					</p>
-					<br>
-				</div>
-				<div class="col-sm-6">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3771.2176459686825!2d72.88771031474347!3d19.054166057610317!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c8a5075f19fd%3A0xd7e7ab6a4a93f968!2sBarks+N+Mews!5e0!3m2!1sen!2sin!4v1552735309375" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>				</div>
-			</div>
 	</div>
 <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
