--- a/Pet2Vet/templates/project.html
+++ b/Pet2Vet/templates/project.html
@@ -3,7 +3,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Veterinary</title>
+	<title>ADOPT</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great" rel="stylesheet">
@@ -60,23 +60,20 @@
 	  </div>
 	</nav>
 	<div class="container">
-		<h1 id="heading">NGOs</h1>
+		<h1 id="heading">ADOPT</h1>
 			<div class="row">
 				<div class="col-sm-6">
-					<h2>F.I.A.P.O</h2>
+					<h2>ELL</h2>
 					<p>
-						<strong>Location: </strong>E-18A, Block E, East of Kailash, New Delhi, Delhi 110048<br>
-            <strong>Contact: </strong>011 4107 2945<br>
+						<strong>Location: </strong>E East of Kailash, New Delhi, Delhi 110048<br>
+            <strong>Contact: </strong>9821244075<br>
+            <strong>Gender: </strong>Male<br>
 
-            <div class="button">
-                <a href="#" class="btn btn-one">Register Here</a>
-                <a href="#" class="btn btn-two"> Donte Here</a>
-            </div>
+
  					</p>
 				</div>
 				<div class="col-sm-6">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3504.416704046125!2d77.2393478148989!3d28.55724719423553!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce3b55bef77f5%3A0x7796fff8850d3261!2sFIAPO+(Federation+of+Indian+Animal+Protection+Organisations)!5e0!3m2!1sen!2sin!4v1552737077208" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-  </div>
+<img src="https://ik.imagekit.io/2345/tr:h-140,w-187,c-at_max/puppies/images/EM.jpg" alt="">  </div>
 			</div>
 			<hr>
 			<div class="row">
@@ -84,19 +81,16 @@
 
 					<p>
 
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3771.046956806766!2d72.83211451474358!3d19.061672957376466!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c91670cf6daf%3A0xdff17ab8bea48aaa!2sPaws+N+Furs!5e0!3m2!1sen!2sin!4v1552734225935" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-
+<img src="https://www.dogspot.in/puppies/images/330x400_15823307_10155094708067313_1024667175191859767_n.jpg" alt="">
 					</p>
 				</div>
 				<div class="col-sm-6" >
           <font color="white">
-          <h2>People For Animal</h2>
-          <strong>Location: </strong>487 Cama Village, Andheri West, Mumbai, Maharashtra 400050<br>
+          <h2>Tabzoo</h2>
+          <strong>Location: </strong>15-A/21, Takshila, Mahakali Caves Road, Andheri East , Mumbai<br>
           <strong>Contact: </strong>094678 85738<br>
-          <div class="button">
-              <a href="#" class="btn btn-one">Register Here</a>
-              <a href="#" class="btn btn-two"> Donte Here</a>
-          </div>
+          <strong>Gender: </strong>male<br>
+
 
           </font>
 				</div>
@@ -104,17 +98,18 @@
 			<hr>
 			<div class="row">
 				<div class="col-sm-6">
-					<h2>Help Animals India</h2>
+					<h2>Eml</h2>
 					<p>
             <strong>Location: </strong>
 Sandesh Nagar, Bail Bazar, Mumbai, Maharashtra 400099<br>
             <strong>Contact: </strong>093246 24543<br>
+            <strong>Gender: </strong>male<br>
+
 					</p>
 					<br>
 				</div>
 				<div class="col-sm-6">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3770.461408038562!2d72.87893111474395!3d19.087403756574368!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c86189ff5f1f%3A0xaf32091295377712!2sSai+Vet+Clinic%2C+Dr.+Chinmay+On+Call+Vet!5e0!3m2!1sen!2sin!4v1552734540191" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>				</div>
-			</div>
+<img src="https://ik.imagekit.io/2345/tr:h-140,w-187,c-at_max/puppies/images/IMG_20151104_004017.jpg" alt="">			</div>
 
 
 	</div>
