Adoption and First Aid done

--- a/Pet2Vet/templates/new.html
+++ b/Pet2Vet/templates/new.html
@@ -52,6 +52,8 @@
 	        <li><a href="http://127.0.0.1:5000/about">About</a></li>
 	        <li><a href="http://127.0.0.1:5000/ngo">Connect with NGO</a></li>
 	        <li><a href="http://127.0.0.1:5000/doctors">Animal Doctors</a></li>
+			<li><a href="http://127.0.0.1:5000/adopt">Adopt</a></li>
+			<li><a href="http://127.0.0.1:5000/petcare">FirstAid</a></li>
 	        <li><a href="http://127.0.0.1:5000/contact">Contact</a></li>
 	      </ul>
 	      <ul class="nav navbar-nav navbar-right">
