--- a/Pet2Vet/templates/petcare.html
+++ b/Pet2Vet/templates/petcare.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Veterinary</title>
+	<title>PetCare</title>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great" rel="stylesheet">
@@ -45,10 +45,10 @@
 	      <ul class="nav navbar-nav">
 	        <li><a href="http://127.0.0.1:5000/welcome">Home</a></li>
 	        <li><a href="http://127.0.0.1:5000/about">About</a></li>
-	        <li class="active"><a href="http://127.0.0.1:5000/ngo">Connect with NGO</a></li>
+	        <li><a href="http://127.0.0.1:5000/ngo">Connect with NGO</a></li>
             <li><a href="http://127.0.0.1:5000/doctors">Animal Doctors</a></li>
 			<li><a href="http://127.0.0.1:5000/adopt">Adopt</a></li>
-			<li><a href="http://127.0.0.1:5000/petcare">FirstAid</a></li>
+            <li class="active"><a href="http://127.0.0.1:5000/petcare">FirstAid</a></li>
 	        <li><a href="http://127.0.0.1:5000/contact">Contact</a></li>
 	      </ul>
 	      <ul class="nav navbar-nav navbar-right">
@@ -59,68 +59,85 @@
 	  </div>
 	</nav>
 	<div class="container">
-		<h1 id="heading">NGOs</h1>
+		<h1 id="heading">Instant Help</h1>
 			<div class="row">
 				<div class="col-sm-6">
-					<h2>F.I.A.P.O</h2>
-					<p>
-						<strong>Location: </strong>E-18A, Block E, East of Kailash, New Delhi, Delhi 110048<br>
-            <strong>Contact: </strong>011 4107 2945<br>
-
-            <div class="button">
-                <a href="#" class="btn btn-one">Register Here</a>
-                <a href="#" class="btn btn-two"> Donate Here</a>
-            </div>
- 					</p>
+					<h2>First Aid kit</h2>
+					<p>Basic first aid kit for your pets</p>
 				</div>
 				<div class="col-sm-6">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3504.416704046125!2d77.2393478148989!3d28.55724719423553!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce3b55bef77f5%3A0x7796fff8850d3261!2sFIAPO+(Federation+of+Indian+Animal+Protection+Organisations)!5e0!3m2!1sen!2sin!4v1552737077208" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-  </div>
-			</div>
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/3oqzOaIplOU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+ </div>
+            </div>
+
+
 			<hr>
 			<div class="row">
 				<div class="col-sm-6" color= white>
-
 					<p>
-
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3771.046956806766!2d72.83211451474358!3d19.061672957376466!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c91670cf6daf%3A0xdff17ab8bea48aaa!2sPaws+N+Furs!5e0!3m2!1sen!2sin!4v1552734225935" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-
+                        <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/JKa7mr6XYS8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</p>
 				</div>
 				<div class="col-sm-6" >
           <font color="white">
-          <h2>People For Animal</h2>
-          <strong>Location: </strong>487 Cama Village, Andheri West, Mumbai, Maharashtra 400050<br>
-          <strong>Contact: </strong>094678 85738<br>
-          <div class="button">
-              <a href="#" class="btn btn-one">Register Here</a>
-              <a href="#" class="btn btn-two"> Donate Here</a>
-          </div>
-
+              <h2>Injured Pet</h2>
+              <p>What to do if your pet is injured?</p><br>
+              <br>
           </font>
 				</div>
 			</div>
 			<hr>
         <div class="row">
 				<div class="col-sm-6">
-					<h2>Help Animals India</h2>
-					<p>
-						<strong>Location: </strong>Sandesh Nagar, Bail Bazar, Mumbai, Maharashtra 400099<br>
-            <strong>Contact: </strong>093246 24543<br>
-
-            <div class="button">
-                <a href="#" class="btn btn-one">Register Here</a>
-                <a href="#" class="btn btn-two"> Donate Here</a>
-            </div>
- 					</p>
+					<h2>CPR</h2>
+					<p>Learn to perform a CPR</p>
 				</div>
 				<div class="col-sm-6">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3770.461408038562!2d72.87893111474395!3d19.087403756574368!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c86189ff5f1f%3A0xaf32091295377712!2sSai+Vet+Clinic%2C+Dr.+Chinmay+On+Call+Vet!5e0!3m2!1sen!2sin!4v1552734540191" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-  </div>
-		</div>
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/KqClwoUrgZA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  </div>
 
 
 	</div>
+        			<hr>
+			<div class="row">
+				<div class="col-sm-6" color= white>
+					<p>
+			<hr>
+			<div class="row">
+				<div class="col-sm-6" color= white>
+					<p>
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/WH2-X_0-feI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>					</p>
+				</div>
+			</div>
+			<hr>					</p>
+				</div>
+				<div class="col-sm-6" >
+          <font color="white">
+              <h2>Emergency</h2>
+              <p>Emergency PetCare and FirstAid</p><br>
+              <br>
+          </font>
+				</div>
+			</div>
+			<hr>
+
+			<div class="row">
+				<div class="col-sm-6">
+					<h2>Pets and Disasters</h2>
+					<p>How to save your pets in disasters</p>
+				</div>
+				<div class="col-sm-6">
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/7UBSLeK0ZCo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </div>
+				</div>
+        <p></p><p></p>
+        <font color="white">
+              <h2>To know more, click the button below :-</h2>
+              <br>
+          </font>
+        <p></p><p></p>
+        <a href="https://www.avma.org/public/Pages/default.aspx" <button type="button" class="btn btn-primary btn-lg btn-block">PetCare - Click Me</button></a>
+        <p></p><p></p>
+    </div>
+
 <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
