--- a/Pet2Vet/templates/donate.html
+++ b/Pet2Vet/templates/donate.html
@@ -7,7 +7,6 @@
 	<link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<style type="text/css">
-
 		#heading{
 				font-family: 'Fredericka the Great', cursive;
 				font-size: 75px;
@@ -57,6 +56,8 @@
 	        <li><a href="http://127.0.0.1:5000/about">About</a></li>
 	        <li><a href="http://127.0.0.1:5000/ngo">Connect with NGO</a></li>
 	        <li><a href="http://127.0.0.1:5000/doctors">Animal Doctors</a></li>
+			<li><a href="http://127.0.0.1:5000/adopt">Adopt</a></li>
+			<li><a href="http://127.0.0.1:5000/petcare">FirstAid</a></li>
 	        <li><a href="http://127.0.0.1:5000/contact">Contact</a></li>
 	      </ul>
 	      <ul class="nav navbar-nav navbar-right">
@@ -73,7 +74,7 @@
 	<div class="row mid"><h1>We would contact you soon</h1></div>
 	<div class="container">
 
-  <form class="form" method="POST" action="/donate">
+  <form class="form" method="POST" action="/donate" style="text-color:white">
     <h2 class="form"></h2>
     {{ form.hidden_tag() }}
     {{ wtf.form_field(form.name) }}
