--- a/Pet2Vet/Pet2Vet/templates/project.html
+++ b/Pet2Vet/Pet2Vet/templates/project.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -9,7 +11,7 @@
 	<style type="text/css">
 		body{
 			margin-top:70px;
-			background-image: url(https://i.pinimg.com/originals/54/5c/7c/545c7ca5f72fa1115249121f2ddf4cee.jpg);
+			background-image: url(https://images.unsplash.com/photo-1441422454217-519d3ee81350?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=c6b9cd37b276dc547554e152446cb6eb&auto=format&fit=crop&w=889&q=80);
 			background-size: cover;
 			background-position: center;
 			background-attachment: fixed;
@@ -38,21 +40,17 @@
 	        <span class="icon-bar"></span>
 	        <span class="icon-bar"></span>
 	      </button>
-	      <a class="navbar-brand"><i class="fa fa-paw"></i> Pet2Vet</a>
+	      <a class="navbar-brand"><i class="fa fa-tree"></i> GGO</a>
 	    </div>
 
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 	      <ul class="nav navbar-nav">
-	        <li><a href="http://127.0.0.1:5000/welcome">Home</a></li>
+	        <li><a href="http://127.0.0.1:5000/">Home</a></li>
 	        <li><a href="http://127.0.0.1:5000/about">About</a></li>
 
-	        <li><a href="http://127.0.0.1:5000/ngo">Connect with NGO</a></li>
-	        <li><a href="http://127.0.0.1:5000/doctors">Animal Doctors</a></li>
-            <li class="active"><a href="http://127.0.0.1:5000/adopt">Adopt</a></li>
-			<li><a href="http://127.0.0.1:5000/petcare">FirstAid</a></li>
-			<li><a href="http://127.0.0.1:5000/location">Vets near me</a></li>
+	        <li class="active"><a href="http://127.0.0.1:5000/project">Veterinary</a></li>
+	        <li><a href="http://127.0.0.1:5000/issue">The Issue</a></li>
 	        <li><a href="http://127.0.0.1:5000/contact">Contact</a></li>
-
 	      </ul>
 	      <ul class="nav navbar-nav navbar-right">
 
