--- a/Pet2Vet/templates/donate.html
+++ b/Pet2Vet/templates/donate.html
@@ -7,6 +7,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<style type="text/css">
+
 		#heading{
 				font-family: 'Fredericka the Great', cursive;
 				font-size: 75px;
@@ -14,13 +15,6 @@
 				text-align:center;
 				margin-bottom: 50px;
 			}
-		.mid{
-			color:white;
-			text-align: center;
-			padding-bottom:50px;
-			font-family: 'Montserrat', sans-serif;
-
-		}
 		body{
 			margin-top:70px;
 			background-image: url(https://i.pinimg.com/originals/54/5c/7c/545c7ca5f72fa1115249121f2ddf4cee.jpg);
@@ -56,9 +50,10 @@
 	        <li><a href="http://127.0.0.1:5000/about">About</a></li>
 	        <li><a href="http://127.0.0.1:5000/ngo">Connect with NGO</a></li>
 	        <li><a href="http://127.0.0.1:5000/doctors">Animal Doctors</a></li>
-			<li><a href="http://127.0.0.1:5000/adopt">Adopt</a></li>
-			<li><a href="http://127.0.0.1:5000/petcare">FirstAid</a></li>
-	        <li><a href="http://127.0.0.1:5000/contact">Contact</a></li>
+	        <li><a href="http://127.0.0.1:5000/adopt">Adopt</a></li>
+			<li><a href="http://127.0.0.1:5000/petcare">First Aid</a></li>
+			<li><a href="http://127.0.0.1:5000/location">Vets near me</a></li>
+			<li><a href="http://127.0.0.1:5000/contact">Contact</a></li>
 	      </ul>
 	      <ul class="nav navbar-nav navbar-right">
 	        <li  class="active"><a href="http://127.0.0.1:5000/donate">Donate</a></li>
@@ -68,23 +63,44 @@
 	  </div>
 	</nav>
 
-
-
-	<h1 id="heading">MAKE SOMEBODY's LIFE BETTER!</h1>
-	<div class="row mid"><h1>We would contact you soon</h1></div>
-	<div class="container">
-
-  <form class="form" method="POST" action="/donate" style="text-color:white">
-    <h2 class="form"></h2>
-    {{ form.hidden_tag() }}
-    {{ wtf.form_field(form.name) }}
-    {{ wtf.form_field(form.email) }}
-    {{ wtf.form_field(form.phone) }}
-	{{ wtf.form_field(form.address) }}
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Submit</button>
   </form>
-
-</div> <!-- /container -->
+	<h1 id="heading">MAKE SOMEONE's LIFE BETTER</h1>
+	<div class="container">
+		<form id="OPA" class="form-horizontal" method="post">
+		  <div class="form-group">
+			  {{ form.hidden_tag() }}
+		    <label for="Name" class=" col-sm-3 col-sm-offset-1 control-label">Name :</label>
+		    <div class="col-sm-5">
+		      <input type="text" class="form-control" for="Name" name="Name" placeholder="Name">
+		    </div>
+		  </div>
+		  <div class="form-group">
+		    <label for="inputEmail3" class=" col-sm-3 col-sm-offset-1 control-label">Email :</label>
+		    <div class="col-sm-5">
+		      <input type="email" class="form-control" name="Email" id="inputEmail3" placeholder="Email">
+		    </div>
+		  </div>
+		   <div class="form-group">
+		    <label for="telephone" class=" col-sm-3 col-sm-offset-1 control-label">Phone no. :</label>
+		    <div class="col-sm-5">
+		      <input type="tel" class="form-control" name="Phone" id="telephone" placeholder="Phone">
+		    </div>
+		  </div>
+		   <div class="form-group">
+		    <label for="addr" class=" col-sm-3 col-sm-offset-1 control-label">Address :</label>
+		    <div class="col-sm-5">
+		    	<textarea name="Addr" class="form-control" id="addr" rows="4" placeholder="Address"></textarea>
+		    </div>
+		  </div>
+		  <br>
+		  <div class="form-group">
+		    <div class="col-sm-1 col-sm-offset-8">
+		      <button type="button" class="btn btn-default">Let Us Contact You!</button>
+		    </div>
+		  </div>
+		</form>
+		<br><br>
+	</div>
 
 <script src="http://code.jquery.com/jquery-2.1.4.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
