--- a/Pet2Vet/templates/ngo.html
+++ b/Pet2Vet/templates/ngo.html
@@ -49,6 +49,7 @@
             <li><a href="http://127.0.0.1:5000/doctors">Animal Doctors</a></li>
 			<li><a href="http://127.0.0.1:5000/adopt">Adopt</a></li>
 			<li><a href="http://127.0.0.1:5000/petcare">FirstAid</a></li>
+			<li><a href="http://127.0.0.1:5000/location">Vets near me</a></li>
 	        <li><a href="http://127.0.0.1:5000/contact">Contact</a></li>
 	      </ul>
 	      <ul class="nav navbar-nav navbar-right">
@@ -68,8 +69,8 @@
             <strong>Contact: </strong>011 4107 2945<br>
 
             <div class="button">
-                <a href="#" class="btn btn-one">Register Here</a>
-                <a href="#" class="btn btn-two"> Donate Here</a>
+                <a href="http://fiapo.org/volunteer/ class="btn btn-one">Register Here</a>
+                <a href="http://fiapo.org/donate/" class="btn btn-two"> Donate Here</a>
             </div>
  					</p>
 				</div>
@@ -93,8 +94,8 @@
           <strong>Location: </strong>487 Cama Village, Andheri West, Mumbai, Maharashtra 400050<br>
           <strong>Contact: </strong>094678 85738<br>
           <div class="button">
-              <a href="#" class="btn btn-one">Register Here</a>
-              <a href="#" class="btn btn-two"> Donate Here</a>
+              <a href="https://peopleforanimalsindia.us20.list-manage.com/subscribe?u=5ca496d3567662bd326765768&id=6b07479e34" class="btn btn-one">Register Here</a>
+              <a href="https://www.peopleforanimalsindia.org/donate.php" class="btn btn-two"> Donate Here</a>
           </div>
 
           </font>
@@ -109,8 +110,8 @@
             <strong>Contact: </strong>093246 24543<br>
 
             <div class="button">
-                <a href="#" class="btn btn-one">Register Here</a>
-                <a href="#" class="btn btn-two"> Donate Here</a>
+                <a href="https://helpanimalsindia.org/signup" class="btn btn-one">Register Here</a>
+                <a href="https://helpanimalsindia.org/donate" class="btn btn-two"> Donate Here</a>
             </div>
  					</p>
 				</div>
