--- a/Pet2Vet/templates/tp.html
+++ b/Pet2Vet/templates/tp.html
@@ -73,6 +73,7 @@
 	        <li><a href="http://127.0.0.1:5000/doctors">Animal Doctors</a></li>
 			<li><a href="http://127.0.0.1:5000/adopt">Adopt</a></li>
 			<li><a href="http://127.0.0.1:5000/petcare">FirstAid</a></li>
+			<li><a href="http://127.0.0.1:5000/location">Vets near me</a></li>
 	        <li><a href="http://127.0.0.1:5000/contact">Contact</a></li>
 	      </ul>
 	      <ul class="nav navbar-nav navbar-right">
@@ -98,20 +99,20 @@
 			<div class="col-lg-3 col-sm-6 col-xs-12">
 				<div class="grid thumbnail">
 					<h4 class="info"><a href="http://127.0.0.1:5000/about">ABOUT</a></h4>
-					<p>Pet2Vet is an initiative to help the animals around!</p>
+					<p>Pet2Vet is an initiative to help the animals around!<p></p>Our mission is to help veterinary practices connect with clients using smart, simple, innovative smartphone applications that build loyalty and help the veterinarian get home for dinner on time.</p>
 				</div>
 			</div>
 
 			<div class="col-lg-3 col-sm-6 col-xs-12">
 				<div class="grid thumbnail">
 					<h4 class="info"><a href="http://127.0.0.1:5000/ngo">NGO</a></h4>
-			<p>We have completed a number projects like Project Green Deccan, Project Protect Himalayas, Project Enrich Biodiversity, Project Green Leh Ladakh and Project Green Thar.</p></div>
+					<p>They help us achieve our vision.<p></p>Our team of accomplished veterinary professionals has over 80 years of combined industry experience! At Vet2Pet, we get to fulfill our passion every day, by helping practices connect with clients and take better care of their patients.</p></div>
 			</div>
 
 			<div class="col-lg-3 col-sm-6 col-xs-12">
 				<div class="grid thumbnail">
 					<h4 class="info"><a href="http://127.0.0.1:5000/doctors">Animal Doctors</a></h4>
-					<p>They are always available -  24*7</p></div>
+					<p>Our team of accomplished veterinary professionals has over 80 years of combined industry experience! At Vet2Pet, we get to fulfill our passion every day, by helping practices connect with clients and take better care of their patients.</p></div>
 			</div>
 
 			<div class="col-lg-3 col-sm-6 col-xs-12">
