--- a/Pet2Vet/templates/about.html
+++ b/Pet2Vet/templates/about.html
@@ -57,6 +57,7 @@
 	        <li><a href="http://127.0.0.1:5000/doctors">Animal Doctors</a></li>
 			<li><a href="http://127.0.0.1:5000/adopt">Adopt</a></li>
 			<li><a href="http://127.0.0.1:5000/petcare">FirstAid</a></li>
+			<li><a href="http://127.0.0.1:5000/location">Vets near me</a></li>
 	        <li><a href="http://127.0.0.1:5000/contact">Contact</a></li>
 	      </ul>
 	      <ul class="nav navbar-nav navbar-right">
@@ -79,9 +80,9 @@
         	<span><h1>Genesis</h1></span>
         	<hr style="width:100px;">
         </div>
-		<p style="font-size:25px; "><i><h2 class="quote">"Go Green… A solemn pledge to plant and nurture trees."</h2></i></p>
+		<p style="font-size:25px; "><i><h2 class="quote">"We can't help everyone, but everyone can help someone."</h2></i></p>
 
-		<p><h3 class="lead">Go Green Organization is a non-profit organization that initiates, develops and manages reforestation and environmental conservation projects across India. We work with an ambitious goal to plant and care for trees and help people reduce their carbon foot print while simultaneously generating livelihood options for rural farmers.</h3></p>
+		<p><h3 class="lead">Pet2Vet is a non-profit organization that initiates, develops and manages adoption, first aid care, and othr pet care projects across India. We work with an ambitious goal to reach out to every animal/ bird on this planet.</h3></p>
 	</div>
 
 	    <div id="tabs-2" class="container">
@@ -94,9 +95,9 @@
             <tr>
                 <td width="380" class="lead" style="vertical-align:top;"><span style=" text-align: justify;
     			text-justify: inter-word;">
-    				Go Green Organization is on the mission to create a cleaner, greener and better planet. To achieve this, we believe in planting trees in those areas that are devoid of them. Along with our greening efforts, we strive to uplift and assist the rural communities.
+    				Pet2Vet is on the mission to create a cleaner, greener and better planet. To achieve this, we believe in planting trees in those areas that are devoid of them. Along with our greening efforts, we strive to uplift and assist the rural communities.
 						<br><br>
-					We at Go Green Organization aspire to bring people, trees and the environment closer through technology.We provide our planters an online platform to plant and track their trees while supporting socio- environmental causes. We endeavour to provide convenience, transparency and clarity through our technology platforms.</span>
+					We at Pet2vet aspire to bring people, trees and the environment closer through technology.We provide our planters an online platform to plant and track their trees while supporting socio- environmental causes. We endeavour to provide convenience, transparency and clarity through our technology platforms.</span>
 				</td>
                 <td width="10">&nbsp;</td>
                 <td width="380" class="lead" style="vertical-align:top;"><span style=" text-align: justify;
