--- a/Pet2Vet/templates/doctors.html
+++ b/Pet2Vet/templates/doctors.html
@@ -49,6 +49,7 @@
 	        <li class="active"><a href="http://127.0.0.1:5000/doctors">Animal Doctors</a></li>
 			<li><a href="http://127.0.0.1:5000/adopt">Adopt</a></li>
 			<li><a href="http://127.0.0.1:5000/petcare">FirstAid</a></li>
+			<li><a href="http://127.0.0.1:5000/location">Vets near me</a></li>
 	        <li><a href="http://127.0.0.1:5000/contact">Contact</a></li>
 	      </ul>
 	      <ul class="nav navbar-nav navbar-right">
